--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -9,6 +9,10 @@
 
     background-position: center right;
 
+    .button {
+        margin-top: 2vw;
+        margin-bottom: 8px;
+    }
 
     &__content {
         max-width: 640px;
@@ -26,7 +30,7 @@
             margin-bottom: 20px;
 
             &:last-child {
-                background-color: red;
+                padding: 48px 0;
             }
 
         }
@@ -34,7 +38,7 @@
         &__combos {
             display: flex;
             justify-content: space-between;
-    
+
             &__combo {
                 width: calc(50% - 12px);
 
