ajustes do mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@
     src: url(../../assets/fonts/Avenir-Regular.woff2);
     font-weight: 400;
 }
+
 @font-face {
     font-family: Avenir;
     src: url(../../assets/fonts/Avenir-Bold.woff2);
@@ -30,7 +31,7 @@ body {
     background-color: variaveis.$corDeFundo;
 }
 
-@mixin text($fontSize:16px) {
+@mixin text($fontSize: 16px) {
     font-size: $fontSize;
     line-height: $fontSize + 10px;
     color: variaveis.$corTextoPrincipal;
@@ -43,22 +44,50 @@ body {
 
 .text--big {
     @include text(18px);
+
+    @media (max-width:768px) {
+        @include text(15px)
+    }
 }
+
 .text {
     @include text;
+
+    @media (max-width:768px) {
+        @include text(14px)
+    }
 }
+
 .text--small {
     @include text(12px);
+
+    @media (max-width:768px) {
+        @include text(11px)
+    }
 }
 
 .title--big {
     @include title(44px);
+
+    @media (max-width:768px) {
+        @include title(26px)
+    }
 }
+
 .title {
     @include title;
+
+    @media (max-width:768px) {
+        @include title(24px)
+    }
 }
+
 .title--small {
     @include title(28px);
+
+    @media (max-width:768px) {
+        @include title(22px)
+    }
 }
 
 .link-text {
@@ -86,7 +115,7 @@ body {
     &:hover {
         background-color: lighten($color: #6421ff, $amount: 3%);
     }
-    
+
 
     &--secondary {
         background-color: #0063e5;
@@ -112,11 +141,15 @@ section {
     min-height: 50vw;
 }
 
-.image-text-section{
+.image-text-section {
     padding: 5.6vw;
     display: grid;
-    grid-template-columns:1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
+
+    @media (max-width:768px) {
+        display: block;
+    }
 
     &__text_container {
         padding: 0 2vw;
@@ -125,14 +158,15 @@ section {
             margin-bottom: 24px;
         }
     }
+
     img {
         max-width: 100%;
     }
-    
+
     &--image-full-width {
         display: block;
         position: relative;
-        
+
         img {
             max-width: 100%;
         }
@@ -147,6 +181,12 @@ section {
             display: flex;
             flex-direction: column;
             justify-content: center;
+
+            @media (max-width:768px) {
+                position: relative;
+                left: 0;
+                width: 100%;
+            }
         }
     }
 }
